--- a/public/addactivity.html
+++ b/public/addactivity.html
@@ -29,18 +29,18 @@
           <table class="table category-buttons">
             <tbody>
               <tr>
-                <td><a class="activity-button" href="#"><img src="assets/button-theatre.png"></a></td>
-                <td><a class="activity-button" href="#"><img src="assets/button-travel.png"></a></td>
-                <td><a class="activity-button" href="#"><img src="assets/button-outdoors.png"></a></td>
+                <td><a href="#"><img class="img1" src="assets/button-theatre.png"></a></td>
+                <td><a class="activity-button2" href="#"><img src="assets/button-travel.png"></a></td>
+                <td><a class="activity-button3" href="#"><img src="assets/button-outdoors.png"></a></td>
               </tr>
               <tr>
-                <td><a class="activity-button" href="#"><img src="assets/button-movies.png"></a></td>
-                <td><a class="activity-button" href="#"><img src="assets/button-bar.png"></a></td>
-                <td><a class="activity-button" href="#"><img src="assets/button-concerts.png"></a></td>
+                <td><a class="activity-button4" href="#"><img src="assets/button-movies.png"></a></td>
+                <td><a class="activity-button5" href="#"><img src="assets/button-bar.png"></a></td>
+                <td><a class="activity-button6" href="#"><img src="assets/button-concerts.png"></a></td>
               </tr>
               <tr>
                 <td></td>
-                <td><a class="activity-button" href="#"><img src="assets/button-train.png"></a></td>
+                <td><a class="activity-button6" href="#"><img src="assets/button-train.png"></a></td>
                 <td></td>
               </tr>
             </tbody>
@@ -48,7 +48,7 @@
         </div>
         <div class="col">
           <p class="add-details">Add some Details</p>
-          <form class="activity-info">
+          <form class="activity-info" action="" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Title</label>
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
