--- a/public/addactivity.html
+++ b/public/addactivity.html
@@ -51,21 +51,21 @@
           <form class="activity-info" action="" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Title</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text class="form-control title-input" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Description</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control description-input" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Date</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="text" class="form-control date-input" id="exampleInputPassword1">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Adress</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="text" class="form-control address-input" id="exampleInputPassword1">
             </div>
-            <button type="submit" class="btn btn-primary">Add Activity</button>
+            <button type="submit" class="btn btn-primary add-activity-btn">Add Activity</button>
           </form>
         </div>
       </div>
@@ -73,5 +73,6 @@
       
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="js/add.js"></script>
 </body>
 </html>
