added hovers to the buttons

--- a/public/addactivity.html
+++ b/public/addactivity.html
@@ -30,17 +30,17 @@
             <tbody>
               <tr>
                 <td><a href="#"><img class="img1" src="assets/button-theatre.png"></a></td>
-                <td><a class="activity-button2" href="#"><img src="assets/button-travel.png"></a></td>
-                <td><a class="activity-button3" href="#"><img src="assets/button-outdoors.png"></a></td>
+                <td><a href="#"><img class="img2" src="assets/button-travel.png"></a></td>
+                <td><a href="#"><img class="img3" src="assets/button-outdoors.png"></a></td>
               </tr>
               <tr>
-                <td><a class="activity-button4" href="#"><img src="assets/button-movies.png"></a></td>
-                <td><a class="activity-button5" href="#"><img src="assets/button-bar.png"></a></td>
-                <td><a class="activity-button6" href="#"><img src="assets/button-concerts.png"></a></td>
+                <td><a href="#"><img class="img4" src="assets/button-movies.png"></a></td>
+                <td><a href="#"><img class="img5" src="assets/button-bar.png"></a></td>
+                <td><a href="#"><img class="img6" src="assets/button-concerts.png"></a></td>
               </tr>
               <tr>
                 <td></td>
-                <td><a class="activity-button6" href="#"><img src="assets/button-train.png"></a></td>
+                <td><a href="#"><img class="img7" src="assets/button-train.png"></a></td>
                 <td></td>
               </tr>
             </tbody>
@@ -50,8 +50,12 @@
           <p class="add-details">Add some Details</p>
           <form class="activity-info" action="" method="POST">
             <div class="form-group">
+              <label for="exampleInputEmail1">Category</label>
+              <input type="text" class="form-control title-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="form-group">
               <label for="exampleInputEmail1">Title</label>
-              <input type="text class="form-control title-input" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control title-input" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="form-group">
               <label for="exampleFormControlTextarea1">Description</label>
